# rotated-cybsss588

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: workflow_pre_commit_check.yml
scripts/: compare_iou.py
src/rotated/: architecture.py  assigner.py  backbone.py  box_utils.py  criterion.py  head.py  layers.py  neck.py
src/rotated/assigner/: __init__.py  base.py  rotated_task_aligned.py  task_aligned.py
src/rotated/assigners/: __init__.py  base.py  calculators.py  rotated_task_aligned.py  spatial.py  task_aligned.py
src/rotated/backbones/: __init__.py  base.py  csp_resnet.py  timm.py
src/rotated/boxes/: conversion.py  decode.py  nms.py  utils.py
src/rotated/iou/: approx_iou.py  approx_sdf.py  compare_iou.py  precise_iou.py  prob_iou.py
src/rotated/losses/: ppyoloer_criterion.py  prob_iou.py
src/rotated/models/: __init__.py  ppyoloer.py
src/rotated/nn/: __init__.py  common.py  custom_pan.py  postprocessor.py  ppyoloer_head.py
src/rotated/utils/: seed.py
tests/: test_architectures.py  test_criterion.py  test_head.py  test_layers.py  test_neck.py  test_utils.py
tests/assigners/: test_calculators.py  test_rotated_task_aligned.py  test_task_aligned.py
tests/backbones/: test_csp_resnet.py  test_timm.py
tests/boxes/: test_nms.py
tests/losses/: test_ppyoloer_criterion.py
tests/models/: test_ppyoloer.py
tests/nn/: test_ppyoloer_head.py
