[project]
name = "rotated"
version = "0.1.0"
description = "Rotated object detection"
readme = "README.md"
authors = [
    { name = "Vincent Camenen", email = "vncntcmnn@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.2",
    "opencv-python-headless>=4.11.0.86",
    "shapely>=2.0.7",
]

[project.optional-dependencies]
cpu = [
    "torch==2.2.0",
    "torchvision>=0.17.0",
]
cu118 = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu118" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
